--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title><%= htmlWebpackPlugin.options.title %></title>
         <meta charset="utf-8">
-        <title>redux</title>
         <meta name="viewport" content="initial-scale=1, width=device-width, user-scalable=no, maximum-scale=1">
     </head>
     <body>
